--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,8 @@
             text-align: center;
             font-weight: bold;
         }
-        .rounded{
+
+        .rounded {
             border-radius: 25px;
         }
     </style>
@@ -29,7 +30,7 @@
         <div class="centered-text rounded">
             <h1 class="rounded" style="background-color: #007E47; color:white"> Verifica vincite Win For Life </h1>
             <h1 id="win_amount"></h1>
-            
+
         </div>
 
         <div class="container rounded" style="background-color: white;">
@@ -75,22 +76,31 @@
                 'game_type': gt
             },
             success: function (text) {
-                let win_msg;
-                if (text['win'] == 0)
-                    win_msg = "Nessuna vincita.";
-                else
-                    win_msg = `Vincita di ${text['win']} euro.`
-                document.getElementById("win_amount").innerText = win_msg;
+                var url = '/winmessage';
+                var form = $('<form action="/winmessage" method="post">' +
+                    '<input type="text" name="win" value="' + text['win'] + '" />' +
+                    '</form>');
+                $('body').append(form);
+                form.submit();
+                // let win_msg;
+                // if (text['win'] == 0)
+                //     win_msg = "Nessuna vincita.";
+                // else
+                //     win_msg = `Vincita di ${text['win']} euro.`
+                // document.getElementById("win_amount").innerText = win_msg;
             }
         }
-        )
 
+        )
         scanner.render(success, error);
+
+
 
     }
 
     function error(res) {
     }
+
 </script>
 
 </html>
