Added QR box, details to win page (front-back)

--- a/templates/winmessage.html
+++ b/templates/winmessage.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Esito Schedina</title>
 </head>
 
 <body>
-    {{amount}}
+    <h1 style="font-family: sans-serif; text-align: center;">{{amount}}</h1>
 </body>
 
 </html>
