--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,10 @@
 </body>
 <script>
     const scanner = new Html5QrcodeScanner('reader', {
+        qrbox: {
+            height: 250,
+            width: 250
+        },
         fps: 20,
         aspectRatio: 1
     });
@@ -82,12 +86,6 @@
                     '</form>');
                 $('body').append(form);
                 form.submit();
-                // let win_msg;
-                // if (text['win'] == 0)
-                //     win_msg = "Nessuna vincita.";
-                // else
-                //     win_msg = `Vincita di ${text['win']} euro.`
-                // document.getElementById("win_amount").innerText = win_msg;
             }
         }
 
