--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@
 
 <script>
 
-    //TODO: fill ul #archivioVincite at startup by loading savedGames (+ get relevant data from it (extractionNo, id, win))
+    //TODO: fill ul #archivioVincite at startup by loading savedGames (+ get relevant data from it (extractionNo, numbers, winAmount))
     const scanner = new Html5QrcodeScanner('reader', {
         qrbox: {
             height: 250,
