--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!--ISHUPOSHIBORU??-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -140,7 +140,6 @@
 </body>
 
 <script>
-    //TODO: fill ul #archivioVincite at startup by loading savedGames (+ get relevant data from it (extractionNo, numbers, winAmount))
     if (!(localStorage.getItem("savedGames") === null)){
         const data = JSON.parse(localStorage.getItem("savedGames"));
         let outcomeList = document.getElementById('winArchive');
@@ -172,14 +171,6 @@
             outcomeList.appendChild(newOutcome);
         }
     }
-    const scanner = new Html5QrcodeScanner('reader', {
-        qrbox: {
-            height: 250,
-            width: 250
-        },
-        fps: 20,
-        aspectRatio: 1
-    });
     let currentGame;
 
     function closePopup(acceptSaveOutcome) {
@@ -237,7 +228,15 @@
         document.getElementById('qrReader').hidden = false;
     }
 
-
+    const scanner = new Html5QrcodeScanner('reader', {
+        qrbox: {
+            height: 250,
+            width: 250
+        },
+        fps: 20,
+        aspectRatio: 1
+    });
+    
     scanner.render(success, error);
 
     function success(res) {
