--- a/templates/index.html
+++ b/templates/index.html
@@ -132,15 +132,17 @@
                     </tr>
                 </thead>
             </table>
+            <h1 id="winTotal" hidden>Vincita totale: </h1>
             <div class="btn btn-danger" id="clearWinArchive" onclick="clearArchive();">Svuota archivio</div>
         </div>
     </div>
-
     </div>
 
 </body>
 
 <script>
+    if (localStorage.getItem("savedGames") === null)
+        document.getElementById('clearWinArchive').hidden = true;
     function clearArchive() {
         let res = confirm("Sei sicuro di voler svuotare l'archivio?");
         if (res) {
@@ -150,6 +152,7 @@
     }
     //TODO: fix bug that lets user add same slip to archive more than once after clearing archive.
     if (!(localStorage.getItem("savedGames") === null)) {
+        let total = 0;
         const data = JSON.parse(localStorage.getItem("savedGames"));
         let outcomeList = document.getElementById('winArchive');
 
@@ -178,7 +181,12 @@
             newOutcome.appendChild(amounttd);
 
             outcomeList.appendChild(newOutcome);
+
+            total += amount;
         }
+        let winTotal = document.getElementById('winTotal')
+        winTotal.innerText = `Vincita totale: ${total}`;
+        winTotal.hidden = false;
     }
     const scanner = new Html5QrcodeScanner('reader', {
         qrbox: {
@@ -198,10 +206,9 @@
 
             let currentSavedGames = JSON.parse(localStorage.getItem("savedGames"));
             let gameAlreadyScanned = false;
-
             for (let game of currentSavedGames) {
                 let truegame = JSON.parse(game);
-                if (truegame["idschedina"] == currentGame["idschedina"])
+                if (truegame["idschedina"] == JSON.parse(currentGame)["idschedina"])
                     gameAlreadyScanned = true;
             }
 
@@ -236,6 +243,9 @@
 
                 outcomeList.appendChild(newOutcome);
             }
+            let clearButton = document.getElementById('clearWinArchive')
+            if (clearButton.hidden == true)
+                clearButton.hidden = false;
         }
         let popup = document.getElementById('popup');
         popup.classList.remove('open-popup');
