--- a/templates/index.html
+++ b/templates/index.html
@@ -12,70 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <style>
-        .centered-text {
-            text-align: center;
-            font-weight: bold;
-        }
-
-        .rounded {
-            border-radius: 25px;
-        }
-
-        .flex-container {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .flex-container-row {
-            display: flex;
-            flex-direction: row;
-        }
-
-        .flex-center {
-            justify-content: center;
-            align-items: center;
-
-        }
-
-        .popup {
-            width: 400px;
-            background: #ddd;
-            border-radius: 6px;
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translate(-50%, -50%) scale(0.1);
-            text-align: center;
-            padding: 0 30px 30px;
-            color: #333;
-            visibility: hidden;
-            transition: 0.4s, top 0.4s;
-            z-index: 100;
-        }
-
-        .popup img {
-            width: 100px;
-            margin-top: -50px;
-            border-radius: 50%;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        .popup button {
-            margin-top: 50px;
-            border: 0;
-            font-size: 18px;
-            border-radius: 4px;
-            cursor: pointer;
-            box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        .open-popup {
-            visibility: visible;
-            top: 50%;
-            transform: translate(-50%, -50%) scale(1);
-        }
-    </style>
+    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.7.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <body>
